# DeepfakeStream

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  preproc_pipeline.sh  pyproject.toml  train_pipeline.sh
.github/workflows/: CI.yml  evidently-cd.yml  evidently-ci.yml  linter_test.yaml  ml-service-ci-reusable.yml  ml_production_CD.yml  ml_shadow_CD.yml  ml_staging_CD.yml  ml_staging_CI.yml
configs/: b5_data_config.json  data_config.json
deployment/: Dockerfile  job.Dockerfile  production.Dockerfile  production.sh
deployment_pipeline/: Dockerfile
docs/: AUGMENTATIONS.md  DRIFT.md  PRED_EXPLAINABILITY.md  PREPROC_PIPELINE.md  README.md  TIMELINE.md
docs/data_management/: AUGMENTATIONS.md  DATA_MANAGEMENT.md
docs/deepfake_classification/: CLASSIFICATION.md
docs/deployment/: DEPLOYMENT.md
docs/face_detection/: DETECTOR.md  FINE_TUNING.MD
docs/maintainance/: DRIFT.md  (+1 more)
drift/: pipeline.py
env_vars/: application.env  data_pipeline.env  extract_frames.env  inference_config.env  pipeline.env  train_data_pipeline.env  train_pipeline.env  train_preproc_pipeline.env  val_data_pipeline.env  val_preproc_pipeline.env
exp_configs/: exp1_config.json
infrastructure/: .checkov.yaml  .gitattributes  .gitignore  README.md
kubernetes/: application.yaml  secrets.yaml
pipelines/: train_utils.py  training_pipeline.py
requirements/: prod_requirements.txt
rest/: controllers.py  settings.py
scripts/: preproc_pipeline.sh  train_pipeline.sh
src/: inference_time.py
tracking/: tracker.py
train_pipeline/: ModelTraining.Dockerfile  pipeline.py
(+331 files in other folders)
