[tool.poetry]
name = "deepfake-detection"
version = "0.1.0"
description = ""
authors = ["Kirill Klimushin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
albumentations = "^1.3.1"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
